[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "releaseup"
description = "An extractive approach for generating release notes from comments and docstrings added between two git tags"
readme = "README.md"
authors = [
  { name = "Saransh Chopra", email = "saransh0701@gmail.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "scikit-learn>=1",
  "spacy>=3.4.1",
  "typing-extensions>=3.7; python_version<'3.8'",
]
optional-dependencies.dev = [
  "pytest>=6",
  "pytest-cov>=3",
]
optional-dependencies.docs = [
  "markdown-callouts>=0.2",
  "mkdocs>=1.3.1",
  "mkdocs-include-exclude-files>=0.0.1",
  "mkdocs-jupyter>=0.21",
  "mkdocs-material>=8.3.9",
  "mkdocstrings-python>=0.7.1",
  "mkdocstrings-python-legacy>=0.2.3",
  "pymdown-extensions>=9.5",
]
optional-dependencies.test = [
  "pytest>=6",
  "pytest-cov>=3",
]
urls."Bug Tracker" = "https://github.com/Saransh-cpp/releaseup/issues"
urls.Changelog = "https://github.com/Saransh-cpp/releaseup/releases"
urls.Discussions = "https://github.com/Saransh-cpp/releaseup/discussions"
urls.Homepage = "https://github.com/Saransh-cpp/releaseup"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "./releaseup/version.py"

[tool.isort]
profile = "black"

[tool.pylint]
master.py-version = "3.7"
master.ignore-paths = [
  "./releaseup/_version.py",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]

[tool.mypy]
files = "src"
python_version = "3.7"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_unreachable = true
ignore_missing_imports = true
